--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,9 @@ jobs:
     
     steps:
       - uses: actions/checkout@v1
-      # - run: npm install
-      # - run: npm run build
-      # - run: npm test
+      - run: npm install
+      - run: npm run build
+      - run: npm test
       - uses: jakejarvis/s3-sync-action@master
         with:
           args: --acl public-read --follow-symlinks --delete --exclude '.git*/*'
